[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Objects/Misc/ColorIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Player/Player/AttachedScripts/PlaceObjectPreview.gd" type="Script" id=4]

[node name="PlaceObject" type="YSort"]
script = ExtResource( 4 )

[node name="ItemToPlace" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
margin_right = 32.0
margin_bottom = 32.0
grow_vertical = 0
mouse_filter = 2

[node name="TreeSeedToPlace" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
margin_left = -38.0
margin_top = -225.0
margin_right = 102.0
margin_bottom = 15.0
grow_vertical = 0
mouse_filter = 2

[node name="ScaledItemToPlace" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
margin_right = 32.0
margin_bottom = 32.0
grow_vertical = 0
mouse_filter = 2
stretch_mode = 1

[node name="ColorIndicator" parent="." instance=ExtResource( 2 )]
z_index = -1

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
visible = false
